--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,6 +2,7 @@
   "name": "src",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon src/index.js"
   },
