--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,7 +16,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
